vJassToTypescript/Generated/VJassParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Grammar/VJass.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class VJassParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, Whitespace=19, Comment=20, LineComment=21, NoVJass=22, WhiteSpaceFragment=23, 
		Number=24, String=25, SingleQuoteString=26, OpenBracket=27, CloseBracket=28, 
		EOL=29, Array=30, Library=31, EndLibrary=32, Optional=33, Globals=34, 
		EndGlobals=35, RequireWords=36, VisibilityScope=37, Constant=38, Not=39, 
		And=40, Or=41, Call=42, Set=43, Interface=44, EndInterface=45, Function=46, 
		EndFunction=47, Takes=48, Return=49, Returns=50, Nothing=51, Method=52, 
		EndMethod=53, Defaults=54, Static=55, Struct=56, EndStruct=57, Extends=58, 
		Operator=59, If=60, EndIf=61, Then=62, ElseIf=63, Else=64, Local=65, Loop=66, 
		ExitWhen=67, EndLoop=68, Implement=69, Initializer=70, Native=71, Scope=72, 
		EndScope=73, Debug=74, Keyword=75, TextMacro=76, EndTextMacro=77, RunTextMacro=78, 
		Module=79, EndModule=80, Identifier=81;
	public const int
		RULE_program = 0, RULE_rootStatement = 1, RULE_libraryStatement = 2, RULE_interfaceStatement = 3, 
		RULE_functionStatement = 4, RULE_structStatement = 5, RULE_rootStatements = 6, 
		RULE_libraryStatements = 7, RULE_interfaceStatements = 8, RULE_functionStatements = 9, 
		RULE_structStatements = 10, RULE_libraryBlock = 11, RULE_libraryRequireBlock = 12, 
		RULE_scopeBlock = 13, RULE_globalsBlock = 14, RULE_globalDeclaration = 15, 
		RULE_interfaceBlock = 16, RULE_interfaceMethodBlock = 17, RULE_interfaceFieldDeclaration = 18, 
		RULE_functionBlock = 19, RULE_functionBlockArguments = 20, RULE_functionBlockReturn = 21, 
		RULE_setStatement = 22, RULE_callStatement = 23, RULE_returnStatement = 24, 
		RULE_localDeclaration = 25, RULE_loopStatement = 26, RULE_implementStatement = 27, 
		RULE_ifStatement = 28, RULE_structStaticIfStatement = 29, RULE_functionStaticIfStatement = 30, 
		RULE_nativeBlock = 31, RULE_methodBlock = 32, RULE_structBlock = 33, RULE_structBlockExtends = 34, 
		RULE_structFieldDeclaration = 35, RULE_moduleBlock = 36, RULE_textMacroBlock = 37, 
		RULE_runTextMacroBlock = 38, RULE_singleExpression = 39, RULE_expressionSequence = 40, 
		RULE_arrayLiteral = 41, RULE_elementList = 42, RULE_initializerBlock = 43, 
		RULE_functionCall = 44, RULE_keyWordStatement = 45;
	public static readonly string[] ruleNames = {
		"program", "rootStatement", "libraryStatement", "interfaceStatement", 
		"functionStatement", "structStatement", "rootStatements", "libraryStatements", 
		"interfaceStatements", "functionStatements", "structStatements", "libraryBlock", 
		"libraryRequireBlock", "scopeBlock", "globalsBlock", "globalDeclaration", 
		"interfaceBlock", "interfaceMethodBlock", "interfaceFieldDeclaration", 
		"functionBlock", "functionBlockArguments", "functionBlockReturn", "setStatement", 
		"callStatement", "returnStatement", "localDeclaration", "loopStatement", 
		"implementStatement", "ifStatement", "structStaticIfStatement", "functionStaticIfStatement", 
		"nativeBlock", "methodBlock", "structBlock", "structBlockExtends", "structFieldDeclaration", 
		"moduleBlock", "textMacroBlock", "runTextMacroBlock", "singleExpression", 
		"expressionSequence", "arrayLiteral", "elementList", "initializerBlock", 
		"functionCall", "keyWordStatement"
	};

	private static readonly string[] _LiteralNames = {
		null, "','", "'='", "'<'", "'[]'", "'[]='", "'//!'", "'+'", "'-'", "'!='", 
		"'!'", "'('", "')'", "'*'", "'/'", "'=='", "'>'", "'>='", "'<='", null, 
		null, null, null, null, null, null, null, "'['", "']'", null, "'array'", 
		"'library'", "'endlibrary'", "'optional'", "'globals'", "'endglobals'", 
		null, null, "'constant'", "'not'", "'and'", "'or'", "'call'", "'set'", 
		"'interface'", "'endinterface'", "'function'", "'endfunction'", "'takes'", 
		"'return'", "'returns'", "'nothing'", "'method'", "'endmethod'", "'defaults'", 
		"'static'", "'struct'", "'endstruct'", "'extends'", "'operator'", "'if'", 
		"'endif'", "'then'", "'elseif'", "'else'", "'local'", "'loop'", "'exitwhen'", 
		"'endloop'", "'implement'", "'initializer'", "'native'", "'scope'", "'endscope'", 
		"'debug'", "'keyword'", "'textmacro'", "'endtextmacro'", "'runtextmacro'", 
		"'module'", "'endmodule'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "Whitespace", "Comment", "LineComment", 
		"NoVJass", "WhiteSpaceFragment", "Number", "String", "SingleQuoteString", 
		"OpenBracket", "CloseBracket", "EOL", "Array", "Library", "EndLibrary", 
		"Optional", "Globals", "EndGlobals", "RequireWords", "VisibilityScope", 
		"Constant", "Not", "And", "Or", "Call", "Set", "Interface", "EndInterface", 
		"Function", "EndFunction", "Takes", "Return", "Returns", "Nothing", "Method", 
		"EndMethod", "Defaults", "Static", "Struct", "EndStruct", "Extends", "Operator", 
		"If", "EndIf", "Then", "ElseIf", "Else", "Local", "Loop", "ExitWhen", 
		"EndLoop", "Implement", "Initializer", "Native", "Scope", "EndScope", 
		"Debug", "Keyword", "TextMacro", "EndTextMacro", "RunTextMacro", "Module", 
		"EndModule", "Identifier"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "VJass.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static VJassParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public VJassParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public VJassParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public RootStatementsContext rootStatements() {
			return GetRuleContext<RootStatementsContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(VJassParser.Eof, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVJassListener typedListener = listener as IVJassListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVJassListener typedListener = listener as IVJassListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92; rootStatements();
			State = 93; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RootStatementContext : ParserRuleContext {
		public LibraryBlockContext libraryBlock() {
			return GetRuleContext<LibraryBlockContext>(0);
		}
		public GlobalsBlockContext globalsBlock() {
			return GetRuleContext<GlobalsBlockContext>(0);
		}
		public InterfaceBlockContext interfaceBlock() {
			return GetRuleContext<InterfaceBlockContext>(0);
		}
		public FunctionBlockContext functionBlock() {
			return GetRuleContext<FunctionBlockContext>(0);
		}
		public StructBlockContext structBlock() {
			return GetRuleContext<StructBlockContext>(0);
		}
		public NativeBlockContext nativeBlock() {
			return GetRuleContext<NativeBlockContext>(0);
		}
		public KeyWordStatementContext keyWordStatement() {
			return GetRuleContext<KeyWordStatementContext>(0);
		}
		public TextMacroBlockContext textMacroBlock() {
			return GetRuleContext<TextMacroBlockContext>(0);
		}
		public RunTextMacroBlockContext runTextMacroBlock() {
			return GetRuleContext<RunTextMacroBlockContext>(0);
		}
		public ModuleBlockContext moduleBlock() {
			return GetRuleContext<ModuleBlockContext>(0);
		}
		public RootStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rootStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVJassListener typedListener = listener as IVJassListener;
			if (typedListener != null) typedListener.EnterRootStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVJassListener typedListener = listener as IVJassListener;
			if (typedListener != null) typedListener.ExitRootStatement(this);
		}
	}

	[RuleVersion(0)]
	public RootStatementContext rootStatement() {
		RootStatementContext _localctx = new RootStatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_rootStatement);
		try {
			State = 105;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 95; libraryBlock();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 96; globalsBlock();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 97; interfaceBlock();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 98; functionBlock();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 99; structBlock();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 100; nativeBlock();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 101; keyWordStatement();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 102; textMacroBlock();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 103; runTextMacroBlock();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 104; moduleBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LibraryStatementContext : ParserRuleContext {
		public GlobalsBlockContext globalsBlock() {
			return GetRuleContext<GlobalsBlockContext>(0);
		}
		public InterfaceBlockContext interfaceBlock() {
			return GetRuleContext<InterfaceBlockContext>(0);
		}
		public FunctionBlockContext functionBlock() {
			return GetRuleContext<FunctionBlockContext>(0);
		}
		public MethodBlockContext methodBlock() {
			return GetRuleContext<MethodBlockContext>(0);
		}
		public StructBlockContext structBlock() {
			return GetRuleContext<StructBlockContext>(0);
		}
		public NativeBlockContext nativeBlock() {
			return GetRuleContext<NativeBlockContext>(0);
		}
		public KeyWordStatementContext keyWordStatement() {
			return GetRuleContext<KeyWordStatementContext>(0);
		}
		public TextMacroBlockContext textMacroBlock() {
			return GetRuleContext<TextMacroBlockContext>(0);
		}
		public RunTextMacroBlockContext runTextMacroBlock() {
			return GetRuleContext<RunTextMacroBlockContext>(0);
		}
		public ModuleBlockContext moduleBlock() {
			return GetRuleContext<ModuleBlockContext>(0);
		}
		public LibraryStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_libraryStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVJassListener typedListener = listener as IVJassListener;
			if (typedListener != null) typedListener.EnterLibraryStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVJassListener typedListener = listener as IVJassListener;
			if (typedListener != null) typedListener.ExitLibraryStatement(this);
		}
	}

	[RuleVersion(0)]
	public LibraryStatementContext libraryStatement() {
		LibraryStatementContext _localctx = new LibraryStatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_libraryStatement);
		try {
			State = 117;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107; globalsBlock();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 108; interfaceBlock();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 109; functionBlock();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 110; methodBlock();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 111; structBlock();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 112; nativeBlock();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 113; keyWordStatement();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 114; textMacroBlock();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 115; runTextMacroBlock();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 116; moduleBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InterfaceStatementContext : ParserRuleContext {
		public InterfaceMethodBlockContext interfaceMethodBlock() {
			return GetRuleContext<InterfaceMethodBlockContext>(0);
		}
		public InterfaceFieldDeclarationContext interfaceFieldDeclaration() {
			return GetRuleContext<InterfaceFieldDeclarationContext>(0);
		}
		public TextMacroBlockContext textMacroBlock() {
			return GetRuleContext<TextMacroBlockContext>(0);
		}
		public RunTextMacroBlockContext runTextMacroBlock() {
			return GetRuleContext<RunTextMacroBlockContext>(0);
		}
		public InterfaceStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_interfaceStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVJassListener typedListener = listener as IVJassListener;
			if (typedListener != null) typedListener.EnterInterfaceStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVJassListener typedListener = listener as IVJassListener;
			if (typedListener != null) typedListener.ExitInterfaceStatement(this);
		}
	}

	[RuleVersion(0)]
	public InterfaceStatementContext interfaceStatement() {
		InterfaceStatementContext _localctx = new InterfaceStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_interfaceStatement);
		try {
			State = 123;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 119; interfaceMethodBlock();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 120; interfaceFieldDeclaration();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 121; textMacroBlock();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 122; runTextMacroBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionStatementContext : ParserRuleContext {
		public SetStatementContext setStatement() {
			return GetRuleContext<SetStatementContext>(0);
		}
		public CallStatementContext callStatement() {
			return GetRuleContext<CallStatementContext>(0);
		}
		public ReturnStatementContext returnStatement() {
			return GetRuleContext<ReturnStatementContext>(0);
		}
		public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		public LocalDeclarationContext localDeclaration() {
			return GetRuleContext<LocalDeclarationContext>(0);
		}
		public LoopStatementContext loopStatement() {
			return GetRuleContext<LoopStatementContext>(0);
		}
		public FunctionStaticIfStatementContext functionStaticIfStatement() {
			return GetRuleContext<FunctionStaticIfStatementContext>(0);
		}
		public ITerminalNode ExitWhen() { return GetToken(VJassParser.ExitWhen, 0); }
		public SingleExpressionContext singleExpression() {
			return GetRuleContext<SingleExpressionContext>(0);
		}
		public TextMacroBlockContext textMacroBlock() {
			return GetRuleContext<TextMacroBlockContext>(0);
		}
		public RunTextMacroBlockContext runTextMacroBlock() {
			return GetRuleContext<RunTextMacroBlockContext>(0);
		}
		public FunctionStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVJassListener typedListener = listener as IVJassListener;
			if (typedListener != null) typedListener.EnterFunctionStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVJassListener typedListener = listener as IVJassListener;
			if (typedListener != null) typedListener.ExitFunctionStatement(this);
		}
	}

	[RuleVersion(0)]
	public FunctionStatementContext functionStatement() {
		FunctionStatementContext _localctx = new FunctionStatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_functionStatement);
		int _la;
		try {
			State = 138;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 125; setStatement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 126; callStatement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 127; returnStatement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 128; ifStatement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 129; localDeclaration();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 130; loopStatement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 131; functionStaticIfStatement();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 132; Match(ExitWhen);
				State = 134;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << Number) | (1L << String) | (1L << SingleQuoteString) | (1L << OpenBracket) | (1L << Not) | (1L << Function))) != 0) || _la==Identifier) {
					{
					State = 133; singleExpression(0);
					}
				}

				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 136; textMacroBlock();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 137; runTextMacroBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructStatementContext : ParserRuleContext {
		public MethodBlockContext methodBlock() {
			return GetRuleContext<MethodBlockContext>(0);
		}
		public ImplementStatementContext implementStatement() {
			return GetRuleContext<ImplementStatementContext>(0);
		}
		public StructStaticIfStatementContext structStaticIfStatement() {
			return GetRuleContext<StructStaticIfStatementContext>(0);
		}
		public TextMacroBlockContext textMacroBlock() {
			return GetRuleContext<TextMacroBlockContext>(0);
		}
		public RunTextMacroBlockContext runTextMacroBlock() {
			return GetRuleContext<RunTextMacroBlockContext>(0);
		}
		public StructFieldDeclarationContext structFieldDeclaration() {
			return GetRuleContext<StructFieldDeclarationContext>(0);
		}
		public StructStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVJassListener typedListener = listener as IVJassListener;
			if (typedListener != null) typedListener.EnterStructStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVJassListener typedListener = listener as IVJassListener;
			if (typedListener != null) typedListener.ExitStructStatement(this);
		}
	}

	[RuleVersion(0)]
	public StructStatementContext structStatement() {
		StructStatementContext _localctx = new StructStatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_structStatement);
		try {
			State = 146;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 140; methodBlock();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 141; implementStatement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 142; structStaticIfStatement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 143; textMacroBlock();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 144; runTextMacroBlock();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 145; structFieldDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
